crates/syn2mas/src/mas_writer/snapshots/syn2mas__mas_writer__test__write_user_with_device.snap
---
source: crates/syn2mas/src/mas_writer/mod.rs
expression: db_snapshot
---
compat_sessions:
  - compat_session_id: 00000000-0000-0000-0000-000000000005
    created_at: "1970-01-01 00:00:00+00"
    device_id: ADEVICE
    finished_at: ~
    human_name: "alice's pinephone"
    is_palpo_admin: "true"
    last_active_at: "1970-01-01 00:00:00+00"
    last_active_ip: 203.0.113.1/32
    user_agent: Browser/5.0
    user_id: 00000000-0000-0000-0000-000000000001
    user_session_id: ~
users:
  - can_request_admin: "false"
    created_at: "1970-01-01 00:00:00+00"
    deactivated_at: ~
    is_guest: "false"
    locked_at: ~
    primary_user_email_id: ~
    user_id: 00000000-0000-0000-0000-000000000001
    username: alice
